Issue 700: Overlapping content

--- a/frontend/src/app/modules/employee/pages/add-employee/add-employee.component.css
+++ b/frontend/src/app/modules/employee/pages/add-employee/add-employee.component.css
@@ -73,6 +73,7 @@ mat-form-field {
 	margin-top: 23px;
 	width: 100%;
 }
+
 .dropzone {
     width: 200px;
     height: 200px;
@@ -106,16 +107,17 @@ mat-form-field {
 }
 
 .drop {
+    /* width: 100%; */
     position: relative;
     height: 120px;
     border-radius: 5px;
 }
 
 .documentText {
-        position: absolute;
-        left: 102px;
-        top: 47px;
-        z-index: 3;
+    position: absolute;
+    left: 102px;
+    top: 47px;
+    z-index: 3;
 }
 
 .documentLabel {
@@ -164,5 +166,23 @@ mat-form-field {
 }
 
 .row .col-md-5{
-    width: 38.66666667%
+    width: 45%
+}
+
+@media only screen and (max-width: 992px) {
+    .row .col-md-5 {
+        width: 60%
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .row .col-md-5 {
+        width: 80%
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    .row .col-md-5 {
+        width: 100%
+    }
 }
