--- a/frontend/src/app/modules/employee/pages/update-profile/update-profile.component.css
+++ b/frontend/src/app/modules/employee/pages/update-profile/update-profile.component.css
@@ -214,5 +214,23 @@ mat-form-field {
 }
 
 .row .col-md-5{
-    width: 38.66666667%
+    width: 45%
+}
+
+@media only screen and (max-width: 992px) {
+    .row .col-md-5 {
+        width: 60%
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .row .col-md-5 {
+        width: 80%
+    }
+}
+
+@media only screen and (max-width: 435px) {
+    .row .col-md-5 {
+        width: 100%
+    }
 }
